# ROS_Line_Follower

./: .gitignore  README.md  linkbluetooth
Arduino/LineFollow/: LineFollow.ino
Arduino/arduino_ros_test/: arduino_ros_test.ino
Arduino/arduino_timer_interrupt_test/: arduino_timer_interrupt_test.ino
ImageProcessing/: detect.py  test.py
ImageProcessing/detect/: CMakeCache.txt  Makefile  cmake_install.cmake  detect  detect.cpp  get_image.cpp
ImageProcessing/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detect  detect.cpp  scratch  scratch.cpp
install/: .rosinstall  _setup_util.py  setup.sh
install/include/test_package/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
install/share/common-lisp/ros/test_package/msg/: Num.lisp  _package_Num.lisp
install/share/gennodejs/ros/test_package/msg/: Num.js
install/share/roseus/ros/test_package/: manifest.l
install/share/roseus/ros/test_package/msg/: Num.l
install/share/test_package/: package.xml
install/share/test_package/cmake/: test_packageConfig.cmake
src/video_detect/: CMakeLists.txt  package.xml
src/video_detect/src/: get_image.cpp
